--- a/GataryLabs.SwfBox.Domain/GataryLabs.SwfBox.Domain.csproj
+++ b/GataryLabs.SwfBox.Domain/GataryLabs.SwfBox.Domain.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\GataryLabs.SwfBox.Domain.Abstractions\GataryLabs.SwfBox.Domain.Abstractions.csproj" />
   </ItemGroup>
 
