--- a/GataryLabs.SwfBox.Persistence/GataryLabs.SwfBox.Persistence.csproj
+++ b/GataryLabs.SwfBox.Persistence/GataryLabs.SwfBox.Persistence.csproj
@@ -1,10 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>disable</Nullable>
     <ImplicitUsings>disable</ImplicitUsings>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\GataryLabs.SwfBox.Persistence.Abstractions\GataryLabs.SwfBox.Persistence.Abstractions.csproj" />
