--- a/GataryLabs.SwfBox/GataryLabs.SwfBox.csproj
+++ b/GataryLabs.SwfBox/GataryLabs.SwfBox.csproj
@@ -6,7 +6,16 @@
     <Nullable>disable</Nullable>
     <ImplicitUsings>disable</ImplicitUsings>
     <UseWPF>true</UseWPF>
+    <ApplicationIcon>Resources\SwfBox_Icons.ai_22834778.ico</ApplicationIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="Resources\SwfBox_Icons.ai_22834778.ico" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\GataryLabs.SwfBox.Domain\GataryLabs.SwfBox.Domain.csproj" />
