+ base controls with mvvm integration

--- a/GataryLabs.SwfBox.Views/GataryLabs.SwfBox.Views.csproj
+++ b/GataryLabs.SwfBox.Views/GataryLabs.SwfBox.Views.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\GataryLabs.SwfBox.ViewModels.Abstractions\GataryLabs.SwfBox.ViewModels.Abstractions.csproj" />
+    <ProjectReference Include="..\GataryLabs.SwfBox.Views.Abstractions\GataryLabs.SwfBox.Views.Abstractions.csproj" />
   </ItemGroup>
 
   <ItemGroup>
