--- a/GataryLabs.SwfBox.Views/GataryLabs.SwfBox.Views.csproj
+++ b/GataryLabs.SwfBox.Views/GataryLabs.SwfBox.Views.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="AdonisUI" Version="1.17.1" />
     <PackageReference Include="AdonisUI.ClassicTheme" Version="1.17.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+    <PackageReference Include="PropertyTools.Wpf" Version="3.1.0" />
   </ItemGroup>
 
   <ItemGroup>
