--- a/GataryLabs.SwfBox.Views/GataryLabs.SwfBox.Views.csproj
+++ b/GataryLabs.SwfBox.Views/GataryLabs.SwfBox.Views.csproj
@@ -8,6 +8,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\Icon_Edit_32x32.png" />
+    <None Remove="Resources\Icon_SwfFileDefault_64x64.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Resources\Icon_Edit_32x32.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\Icon_SwfFileDefault_64x64.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AdonisUI" Version="1.17.1" />
     <PackageReference Include="AdonisUI.ClassicTheme" Version="1.17.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
