--- a/GataryLabs.SwfBox.Views/GataryLabs.SwfBox.Views.csproj
+++ b/GataryLabs.SwfBox.Views/GataryLabs.SwfBox.Views.csproj
@@ -8,17 +8,25 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\Icon_Edit_24x24.png" />
     <None Remove="Resources\Icon_Edit_32x32.png" />
+    <None Remove="Resources\Icon_SwfFileDefault_128x128.png" />
     <None Remove="Resources\Icon_SwfFileDefault_64x64.png" />
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="Resources\Icon_Edit_32x32.png">
+    <Resource Include="Resources\Icon_Edit_24x24.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Resources\Icon_SwfFileDefault_64x64.png">
+    </Resource>
+    <Resource Include="Resources\Icon_Edit_32x32.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
+    </Resource>
+    <Resource Include="Resources\Icon_SwfFileDefault_128x128.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Icon_SwfFileDefault_64x64.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
 
   <ItemGroup>
