--- a/GataryLabs.SwfBox.ViewModels/GataryLabs.SwfBox.ViewModels.csproj
+++ b/GataryLabs.SwfBox.ViewModels/GataryLabs.SwfBox.ViewModels.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\GataryLabs.SwfBox.ViewModels.Abstractions\GataryLabs.SwfBox.ViewModels.Abstractions.csproj" />
+    <ProjectReference Include="..\GataryLabs.SwfBox.Views.Abstractions\GataryLabs.SwfBox.Views.Abstractions.csproj" />
   </ItemGroup>
 
 </Project>
