--- a/GataryLabs.SwfBox.Domain/GataryLabs.SwfBox.Domain.csproj
+++ b/GataryLabs.SwfBox.Domain/GataryLabs.SwfBox.Domain.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AgileObjects.AgileMapper" Version="1.8.1" />
+    <PackageReference Include="Mapster" Version="7.4.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
   </ItemGroup>
 
