+ show selection on details screen

--- a/GataryLabs.SwfBox.ViewModels/GataryLabs.SwfBox.ViewModels.csproj
+++ b/GataryLabs.SwfBox.ViewModels/GataryLabs.SwfBox.ViewModels.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\GataryLabs.SwfBox.Domain.Abstractions\GataryLabs.SwfBox.Domain.Abstractions.csproj" />
+    <ProjectReference Include="..\GataryLabs.SwfBox.Infrastructure\GataryLabs.SwfBox.Infrastructure.csproj" />
     <ProjectReference Include="..\GataryLabs.SwfBox.ViewModels.Abstractions\GataryLabs.SwfBox.ViewModels.Abstractions.csproj" />
     <ProjectReference Include="..\GataryLabs.SwfBox.Views.Abstractions\GataryLabs.SwfBox.Views.Abstractions.csproj" />
   </ItemGroup>
