configure nlog logging

--- a/GataryLabs.SwfBox/GataryLabs.SwfBox.csproj
+++ b/GataryLabs.SwfBox/GataryLabs.SwfBox.csproj
@@ -21,7 +21,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
-    <PackageReference Include="NLog" Version="6.0.5" />
+    <PackageReference Include="NLog.Extensions.Logging" Version="6.0.5" />
   </ItemGroup>
 
   <ItemGroup>
@@ -30,6 +30,12 @@
     <ProjectReference Include="..\GataryLabs.SwfBox.Persistence\GataryLabs.SwfBox.Persistence.csproj" />
     <ProjectReference Include="..\GataryLabs.SwfBox.ViewModels\GataryLabs.SwfBox.ViewModels.csproj" />
     <ProjectReference Include="..\GataryLabs.SwfBox.Views\GataryLabs.SwfBox.Views.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="nlog.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
