--- a/GataryLabs.SwfBox.ViewModels/GataryLabs.SwfBox.ViewModels.csproj
+++ b/GataryLabs.SwfBox.ViewModels/GataryLabs.SwfBox.ViewModels.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="CommunityToolkit.Mvvm" Version="7.1.2" />
     <PackageReference Include="Mapster" Version="7.4.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
