--- a/GataryLabs.SwfBox.Persistence.Abstractions/GataryLabs.SwfBox.Persistence.Abstractions.csproj
+++ b/GataryLabs.SwfBox.Persistence.Abstractions/GataryLabs.SwfBox.Persistence.Abstractions.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>disable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\GataryLabs.SwfBox.Configuration.Abstractions\GataryLabs.SwfBox.Configuration.Abstractions.csproj" />
+  </ItemGroup>
+
 </Project>
