--- a/GataryLabs.SwfBox/appsettings.json
+++ b/GataryLabs.SwfBox/appsettings.json
@@ -1,8 +1,26 @@
 {
-  "ScanFolderOptions": {
-    "Depth": 1,
-    "FileNamesToIgnore": [
-      "expressInstall.swf"
-    ]
+  "DefaultSettings": {
+
+    "Scanning": {
+      "Depth": 1,
+      "FileNamesToIgnore": [
+        "expressInstall.swf"
+      ]
+    },
+
+    "Analysis": {
+      "ImageAutoSearchDepth": 1
+    },
+
+    "Player": {
+      "PlayerTypeIndex": 0,
+      "OverlayMenuEnabled": false,
+      "Players": [
+        {
+          "Mode": "IntegratedWebPlayer"
+        }
+      ]
+    }
+
   }
 }
