--- a/GataryLabs.SwfBox.Domain/GataryLabs.SwfBox.Domain.csproj
+++ b/GataryLabs.SwfBox.Domain/GataryLabs.SwfBox.Domain.csproj
@@ -7,9 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Hypo.Flazzy" Version="0.4.0" />
     <PackageReference Include="Mapster" Version="7.4.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
+    <PackageReference Include="SwfLib" Version="1.0.5" />
   </ItemGroup>
 
   <ItemGroup>
