+ tree data models

--- a/GataryLabs.Mvvm.ViewModels/GataryLabs.Mvvm.ViewModels.csproj
+++ b/GataryLabs.Mvvm.ViewModels/GataryLabs.Mvvm.ViewModels.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\GataryLabs.Collections\GataryLabs.Collections.csproj" />
     <ProjectReference Include="..\GataryLabs.Mvvm.ViewModels.Abstractions\GataryLabs.Mvvm.ViewModels.Abstractions.csproj" />
   </ItemGroup>
 
