--- a/GataryLabs.SwfBox.Domain/GataryLabs.SwfBox.Domain.csproj
+++ b/GataryLabs.SwfBox.Domain/GataryLabs.SwfBox.Domain.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Mapster" Version="7.4.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
     <PackageReference Include="SwfLib" Version="1.0.5" />
   </ItemGroup>
 
