--- a/GataryLabs.SwfBox.Views/GataryLabs.SwfBox.Views.csproj
+++ b/GataryLabs.SwfBox.Views/GataryLabs.SwfBox.Views.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <None Remove="Resources\Icon_Edit_24x24.png" />
     <None Remove="Resources\Icon_Edit_32x32.png" />
+    <None Remove="Resources\Icon_Explore_32x32.png" />
     <None Remove="Resources\Icon_SwfFileDefault_128x128.png" />
     <None Remove="Resources\Icon_SwfFileDefault_64x64.png" />
   </ItemGroup>
@@ -19,6 +20,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\Icon_Edit_32x32.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Icon_Explore_32x32.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\Icon_SwfFileDefault_128x128.png">
@@ -33,6 +37,7 @@
     <PackageReference Include="AdonisUI" Version="1.17.1" />
     <PackageReference Include="AdonisUI.ClassicTheme" Version="1.17.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="7.0.0" />
     <PackageReference Include="Notification.Wpf" Version="8.0.0" />
     <PackageReference Include="PropertyTools.Wpf" Version="3.1.0" />
   </ItemGroup>
